packages/jsii/test/negatives/neg.enum-name.1.ts
///!MATCH_ERROR: Enum names must use TRUMP_CASE: myEnum

export enum myEnum {
    Foo,
    Goo
}
